# termbox

./: .ghcid  .hlint.yaml  .travis.yml  CHANGELOG.md  README.md  cabal.project.freeze  hie.yaml  termbox.cabal
.github/workflows/: ci.yaml
bench/: Main.hs
cbits/: termbox.c
examples/: Colors.hs  Output.hs
src/: Termbox.hs
src/Termbox/: Attr.hs  C.chs  Cell.hs  Cells.hs  Cursor.hs  Event.hs  InputMode.hs  Internal.chs  Internal.hs  Key.hs  Mouse.hs  MouseMode.hs  OutputMode.hs
