cabal-version: 2.2
name: termbox
version: 0

library
  build-depends:
      array
    , base
  build-tool-depends:
    c2hs:c2hs
  default-language:
    Haskell2010
  exposed-modules:
    Termbox
    Termbox.Internal
  extra-libraries:
    termbox
  ghc-options:
    -fprint-expanded-synonyms
    -fprint-explicit-foralls
    -fprint-explicit-kinds
    -fprint-unicode-syntax
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -- -Wmissing-local-signatures
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monadfail-instances
    -Wpartial-fields
    -Wredundant-constraints
  hs-source-dirs:
    src

executable termbox-example-output
  build-depends:
      base
    , termbox
  ghc-options:
    -rtsopts
    -threaded
    -Wall
  hs-source-dirs:
    examples
  main-is:
    Output.hs
