cabal-version: 2.0

name: termbox
version: 0.1.0
category: User Interfaces
description:
  This package provides a thin wrapper around @termbox v1.1.2@, a simple C
  library for writing text-based user interfaces.
  .
  <https://github.com/nsf/termbox>
synopsis: @termbox v1.1.2@
author: Mitchell Rosen
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
homepage: https://github.com/mitchellwrosen/termbox
bug-reports: https://github.com/mitchellwrosen/termbox/issues
copyright: (c) 2018, Mitchell Rosen
license: BSD3
license-file: LICENSE
build-type: Simple
tested-with: GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.3

extra-source-files:
  .travis.yml
  CHANGELOG.md
  include/termbox.h

library
  build-depends:
      array
    , base ^>= 4.9 || ^>= 4.10 || ^>= 4.11
  build-tool-depends:
    c2hs:c2hs
  c-sources:
    cbits/termbox.c
    cbits/utf8.c
  default-language:
    Haskell2010
  exposed-modules:
    Termbox
  ghc-options:
    -fprint-expanded-synonyms
    -fprint-explicit-foralls
    -fprint-explicit-kinds
    -fprint-unicode-syntax
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monadfail-instances
    -Wpartial-fields
    -Wredundant-constraints
  hs-source-dirs:
    src
  include-dirs:
    include
  other-modules:
    Termbox.Internal

executable termbox-example-colors
  build-depends:
      base
    , termbox
  default-language:
    Haskell2010
  ghc-options:
    -rtsopts
    -threaded
    -Wall
  hs-source-dirs:
    examples
  main-is:
    Colors.hs
